[package]
name = "cmdipass"
version = "0.1.1"
authors = ["Justin Fitzsimmons <justinf@nulogy.com>"]

[dependencies]
docopt = "0.7"
rustc-serialize = "0.3"
hyper = "0.10"
rust-crypto = "0.2"
base64 = "0.3"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3"
env_logger = "0.3"

[build-dependencies]
toml = { version = "0.4", default-features = false }
